Add convenient wither enabling preview features